--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -35,9 +35,9 @@
     </div>
 </div>
 <div class="form-group">
-    <label for="longitude" class="col-sm-2 control-label">Longitude</label>
+    <label for="longtitude" class="col-sm-2 control-label">Longtitude</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.longitude" class="form-control" id="longitude" placeholder="Longitude"/>
+        <input type="text" ng-model="shipwreck.longtitude" class="form-control" id="longtitude" placeholder="Longtitude"/>
     </div>
 </div>
 <div class="form-group">
