--- a/src/main/resources/public/views/shipwreck-view.html
+++ b/src/main/resources/public/views/shipwreck-view.html
@@ -26,7 +26,7 @@
       </tr>
       <tr>
           <td>Location</td>
-          <td>{{shipwreck.latitude}}, {{shipwreck.longitude}}</td>
+          <td>{{shipwreck.latitude}}, {{shipwreck.longtitude}}</td>
       </tr>
   </table>
   <div>
